--- a/pyWebTest/newYear/templates/newyear/index.html
+++ b/pyWebTest/newYear/templates/newyear/index.html
@@ -1,16 +1,21 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Is it new year ?</title>
+    <link href="{% static 'newyear/style.css' %}" rel="stylesheet">
 </head>
+
 <body>
-    <h1>hello world</h1>
-    <h1>hello world</h1>
-    <h1>hello world</h1>
-    <h1>hello world</h1>
-    <h1>hello world</h1>
+    {% if newYearTrue %}
+    <h1>YES</h1>
+    {% else %}
+    <h1>NO</h1>
+    {% endif %}
 </body>
+
 </html>
